kubernetes/dep-track/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependencytrack-front
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: dependencytrack-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/component: dependencytrack-frontend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: dt
          image: docker.io/dependencytrack/frontend
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
          resources:
            requests:
              memory: "512M"
              cpu: "1.0"
            limits:
              memory: "2G"
              cpu: "2.0"
